--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             width: 250px;
             outline: none;
             text-align: center;
-            font-family: 'Comic Sans MS';
+            font-family: 'arial';
         }
 
         #passwordInput::placeholder {
