--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             background: #000;
             z-index: 99999;
             display: flex;
+            max-width: 100vh;
+            overflow: hidden;
             justify-content: center;
             align-items: center;
         }
