--- a/index.html
+++ b/index.html
@@ -13,40 +13,70 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: #000;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
             z-index: 99999;
             display: flex;
-            max-width: 100vh;
-            overflow: hidden;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+            transition: opacity 0.5s ease;
+        }
+
+        .password-container {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 40px;
+            border-radius: 12px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            width: 320px;
+            text-align: center;
+        }
+
+        .password-title {
+            color: #ffffff;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            font-size: 1.5em;
+            margin-bottom: 20px;
+            font-weight: 600;
         }
 
         #passwordInput {
             background: rgba(255, 255, 255, 0.1);
-            border: none;
-            border-radius: 25px;
-            padding: 15px 25px;
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 1.0em;
-            width: 250px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 8px;
+            padding: 12px 20px;
+            color: #ffffff;
+            font-size: 1.1em;
+            width: 100%;
+            box-sizing: border-box;
             outline: none;
-            text-align: center;
-            font-family: 'arial';
+            font-family: 'Segoe UI', Arial, sans-serif;
+            transition: all 0.3s ease;
+        }
+
+        #passwordInput:focus {
+            border-color: #00aaff;
+            background: rgba(255, 255, 255, 0.15);
+            box-shadow: 0 0 12px rgba(0, 170, 255, 0.2);
         }
 
         #passwordInput::placeholder {
-            color: rgba(255, 255, 255, 0.5);
+            color: rgba(255, 255, 255, 0.6);
+            font-family: 'Segoe UI', Arial, sans-serif;
         }
 
         #errorMessage {
-            color: #ff0000;
-            position: fixed;
-            top: 60vh;
-            text-align: center;
-            width: 100%;
+            color: #ff5555;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            font-size: 0.95em;
+            margin-top: 15px;
             display: none;
-            font-size: 1.1em;
+            padding: 8px 15px;
+            background: rgba(255, 85, 85, 0.1);
+            border-radius: 6px;
+            border: 1px solid rgba(255, 85, 85, 0.2);
+            transition: opacity 0.3s ease;
         }
 
         /* ======= ORIGINAL STYLES ======= */
@@ -57,6 +87,7 @@
             font-family: 'Comic Sans MS';
             min-height: 100vh;
             overflow-x: hidden;
+            overflow-y: hidden; /* Hide scroll initially */
         }
 
         .container {
@@ -251,6 +282,7 @@
                 right: 10px;
             }
             .flying-image { width: 120px !important; }
+            .password-container { width: 280px; padding: 30px; }
         }
 
         #strongg {
@@ -384,8 +416,11 @@
 <body>
     <!-- Password Overlay -->
     <div class="password-overlay">
-        <input type="password" id="passwordInput" placeholder="Enter Secret Code" autocomplete="off">
-        <div id="errorMessage">WRONG CODE! TRY AGAIN! 😡</div>
+        <div class="password-container">
+            <div class="password-title">Enter Secret Code</div>
+            <input type="password" id="passwordInput" placeholder="Code..." autocomplete="off">
+            <div id="errorMessage">Invalid Code - Try Again</div>
+        </div>
     </div>
 
     <!-- Original Content -->
@@ -459,16 +494,20 @@
 
         function checkPassword() {
             if (passwordInput.value === CORRECT_PASSWORD) {
-                passwordOverlay.style.display = 'none';
-                document.body.style.background = 'linear-gradient(45deg, #ff00ff, #00ffff, #ffff00)';
-                document.querySelectorAll('.container, #musicToggle').forEach(el => {
-                    el.style.visibility = 'visible';
-                });
-                
-                if (!initialized) {
-                    initializePage();
-                    initialized = true;
-                }
+                passwordOverlay.style.opacity = '0';
+                setTimeout(() => {
+                    passwordOverlay.style.display = 'none';
+                    document.body.style.background = 'linear-gradient(45deg, #ff00ff, #00ffff, #ffff00)';
+                    document.body.style.overflowY = 'auto';
+                    document.querySelectorAll('.container, #musicToggle').forEach(el => {
+                        el.style.visibility = 'visible';
+                    });
+                    
+                    if (!initialized) {
+                        initializePage();
+                        initialized = true;
+                    }
+                }, 500);
             } else {
                 errorMessage.style.display = 'block';
                 passwordInput.value = '';
