--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
         </div>
         <!-- NEW FOOTER -->
 <div class="password-footer">
-    <span>&copy; <span id="currentYear"></span> ChutPaglu LLC</span> |
-    <span>CEO: Adrit Bhatnagar</span>
+    <span>&copy; <span id="currentYear"></span>ChutPaglu LLC</span> |
+    <span>Adrit Bhatnagar, C.E.O</span>
 </div>
     </div>
 
