--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
         <!-- NEW FOOTER -->
 <div class="password-footer">
-    <span>&copy; <span id="currentYear"></span>ChutPaglu LLC</span> |
+    <span>ChutPaglu LLC &copy; <span id="currentYear"></span></span> |
     <span>Adrit Bhatnagar, C.E.O</span>
 </div>
     </div>
