--- a/index.html
+++ b/index.html
@@ -453,8 +453,7 @@
         </div>
         <!-- NEW FOOTER -->
 <div class="password-footer">
-    <span>ChutPaglu LLC &copy; <span id="currentYear"></span></span> |
-    <span>Adrit Bhatnagar, C.E.O</span>
+    <span>Adrit Bhatnagar, C.E.O - ChutPaglu LLC &copy; <span id="currentYear"></span></span>
 </div>
     </div>
 
