--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
         <!-- NEW FOOTER -->
 <div class="password-footer">
-    <span>Adrit Bhatnagar, C.E.O - ChutPaglu LLC &copy; <span id="currentYear"></span></span>
+    <span>Adrit Bhatnagar, CEO — Chutpaglu LLC. &copy;<span id="currentYear"></span></span>
 </div>
     </div>
 
