--- a/index.html
+++ b/index.html
@@ -24,21 +24,13 @@
 
         .password-container {
             background: rgba(255, 255, 255, 0.05);
-            padding: 40px;
+            padding: 25px;
             border-radius: 12px;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.1);
             width: 320px;
             text-align: center;
-        }
-
-        .password-title {
-            color: #ffffff;
-            font-family: 'Segoe UI', Arial, sans-serif;
-            font-size: 1.5em;
-            margin-bottom: 20px;
-            font-weight: 600;
         }
 
         #passwordInput {
@@ -53,6 +45,7 @@
             outline: none;
             font-family: 'Segoe UI', Arial, sans-serif;
             transition: all 0.3s ease;
+            margin-top: 10px;
         }
 
         #passwordInput:focus {
@@ -447,7 +440,6 @@
     <!-- Password Overlay -->
     <div class="password-overlay">
         <div class="password-container">
-            <div class="password-title">Enter Secret Code</div>
             <input type="password" id="passwordInput" placeholder="Code..." autocomplete="off">
             <div id="errorMessage">Invalid Code - Try Again</div>
         </div>
