--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
         }
 
         .password-container {
-            background: rgba(255, 255, 255, 0.05);
+            background: transparent;
             padding: 25px;
             border-radius: 12px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
             width: 320px;
             text-align: center;
         }
