--- a/index.html
+++ b/index.html
@@ -30,30 +30,47 @@
             text-align: center;
         }
 
-        #passwordInput {
-            background: rgba(255, 255, 255, 0.1);
+        .input-group {
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .input-group input {
+            width: 100%;
+            padding: 12px 20px;
+            font-size: 1.1em;
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 8px;
-            padding: 12px 20px;
+            background: rgba(255, 255, 255, 0.1);
             color: #ffffff;
-            font-size: 1.1em;
-            width: 100%;
-            box-sizing: border-box;
             outline: none;
-            font-family: 'Segoe UI', Arial, sans-serif;
             transition: all 0.3s ease;
-            margin-top: 10px;
         }
 
-        #passwordInput:focus {
-            border-color: #00aaff;
-            background: rgba(255, 255, 255, 0.15);
-            box-shadow: 0 0 12px rgba(0, 170, 255, 0.2);
-        }
-
-        #passwordInput::placeholder {
+        .input-group label {
+            position: absolute;
+            top: 50%;
+            left: 20px;
+            transform: translateY(-50%);
+            font-size: 1.1em;
             color: rgba(255, 255, 255, 0.6);
-            font-family: 'Segoe UI', Arial, sans-serif;
+            pointer-events: none;
+            transition: all 0.3s ease;
+        }
+
+        .input-group input:focus,
+        .input-group input:not(:placeholder-shown) {
+            border-color: #ffffff; /* Pure white focus color */
+        }
+
+        .input-group input:focus + label,
+        .input-group input:not(:placeholder-shown) + label {
+            top: -10px;
+            left: 10px;
+            font-size: 0.8em;
+            color: #ffffff;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2d2d2d 100%);
+            padding: 0 5px;
         }
 
         #errorMessage {
@@ -70,7 +87,7 @@
             transition: opacity 0.3s ease;
         }
         
-        /* NEW FOOTER STYLES */
+        /* Updated Footer Styles */
         .password-footer {
             position: fixed;
             bottom: 0;
@@ -83,14 +100,10 @@
             color: rgba(255, 255, 255, 0.7);
             font-family: 'Segoe UI', Arial, sans-serif;
             font-size: 0.8em;
-            text-align: center;
-            line-height: 1.4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             z-index: 99999;
-        }
-
-        .password-footer span {
-            display: inline-block;
-            margin: 0 5px;
         }
 
         @media (max-width: 600px) {
@@ -445,10 +458,12 @@
     <!-- Password Overlay -->
     <div class="password-overlay">
         <div class="password-container">
-            <input type="password" id="passwordInput" placeholder="Code..." autocomplete="off">
+            <div class="input-group">
+                <input type="password" id="passwordInput" placeholder=" " autocomplete="off">
+                <label for="passwordInput">Code</label>
+            </div>
             <div id="errorMessage">Invalid Code - Try Again</div>
         </div>
-        <!-- NEW FOOTER -->
         <div class="password-footer">
             <span>Adrit Bhatnagar, CEO — Chutpaglu LLC. ©<span id="currentYear"></span></span>
         </div>
@@ -525,7 +540,6 @@
             el.style.visibility = 'hidden';
         });
         document.body.style.background = '#000';
-        passwordInput.focus();
 
         function checkPassword() {
             if (passwordInput.value === CORRECT_PASSWORD) {
