--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         }
 
         #passwordInput {
-            background: rgba(255, 255, 255, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(72, 72, 72, 0.1);
+            border: 1px solid rgba(221, 221, 221, 0.2);
             border-radius: 8px;
             padding: 12px 20px;
             color: #ffffff;
@@ -47,13 +47,11 @@
         }
 
         #passwordInput:focus {
-            border-color: #00aaff;
-            background: rgba(255, 255, 255, 0.15);
-            box-shadow: 0 0 12px rgba(0, 170, 255, 0.2);
+            border-color: #959595;
         }
 
         #passwordInput::placeholder {
-            color: rgba(255, 255, 255, 0.6);
+            color: rgba(109, 109, 109, 0.6);
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
@@ -80,7 +78,7 @@
             padding: 15px;
             background: rgba(10, 10, 10, 0.4);
             backdrop-filter: blur(5px);
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            border-top: 1px solid rgba(170, 170, 170, 0.2);
             color: rgba(255, 255, 255, 0.7);
             font-family: 'Segoe UI', Arial, sans-serif;
             font-size: 0.8em;
@@ -565,7 +563,7 @@
     <!-- Password Overlay -->
     <div class="password-overlay">
         <div class="password-container">
-            <input type="password" id="passwordInput" placeholder="Code..." autocomplete="off">
+            <input type="password" id="passwordInput" placeholder="Code" autocomplete="off">
             <div id="errorMessage">Invalid Code - Try Again</div>
         </div>
         <!-- NEW FOOTER -->
