--- a/index.html
+++ b/index.html
@@ -370,6 +370,7 @@
             }
 
             .chutpaglu-meter {
+                margin-top: 15px;
                 height: 30px;
             }
 
@@ -384,8 +385,11 @@
                 right: 10px;
             }
 
+            .alert-banner{
+                font-size: 0.6em;
+                        }
+
             .flying-image {
-    max-width: 120px !important; /* Instead of fixed width */
     height: auto !important;
   }
         }
